added comments and user guides
