# docs/swagger.json
@@ -79,6 +79,13 @@
                 "summary": "Creates a product",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Request body of Product",
                         "name": "product",
                         "in": "body",
@@ -97,6 +104,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.CustomError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/errors.CustomError"
                         }
@@ -166,6 +179,13 @@
                         "schema": {
                             "$ref": "#/definitions/types.ProductBody"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -174,6 +194,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.CustomError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/errors.CustomError"
                         }
@@ -202,6 +228,13 @@
                         "name": "product",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -210,6 +243,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.CustomError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/errors.CustomError"
                         }
@@ -247,21 +286,27 @@
                         "type": "object",
                         "properties": {
                             "createdAt": {
+                                "description": "CreatedAt is the time when the product was created",
                                 "type": "string"
                             },
                             "description": {
+                                "description": "Description is the description of the product. Max length is 200.\n+required",
                                 "type": "string"
                             },
                             "id": {
+                                "description": "ID represents the product id",
                                 "type": "integer"
                             },
                             "name": {
+                                "description": "Name is the name of the product. Max length is 100.\n+required",
                                 "type": "string"
                             },
                             "price": {
+                                "description": "Price is the price of the product. Must be positive number.\n+required",
                                 "type": "number"
                             },
                             "updatedAt": {
+                                "description": "UpdatedAt is the time when the product was updated",
                                 "type": "string"
                             }
                         }
@@ -285,12 +330,15 @@
             "type": "object",
             "properties": {
                 "description": {
+                    "description": "Description is the description of the product. Max length is 200.\n+required",
                     "type": "string"
                 },
                 "name": {
+                    "description": "Name is the name of the product. Max length is 100.\n+required",
                     "type": "string"
                 },
                 "price": {
+                    "description": "Price is the price of the product. Must be positive number.\n+required",
                     "type": "number"
                 }
             }
@@ -299,21 +347,27 @@
             "type": "object",
             "properties": {
                 "createdAt": {
+                    "description": "CreatedAt is the time when the product was created",
                     "type": "string"
                 },
                 "description": {
+                    "description": "Description is the description of the product. Max length is 200.\n+required",
                     "type": "string"
                 },
                 "id": {
+                    "description": "ID represents the product id",
                     "type": "integer"
                 },
                 "name": {
+                    "description": "Name is the name of the product. Max length is 100.\n+required",
                     "type": "string"
                 },
                 "price": {
+                    "description": "Price is the price of the product. Must be positive number.\n+required",
                     "type": "number"
                 },
                 "updatedAt": {
+                    "description": "UpdatedAt is the time when the product was updated",
                     "type": "string"
                 }
             }
